# RAG-PDF-Assistant

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
docs/: chatbot_docs.md
notebooks/: 01-conexao-langchain-groq-Copy1.ipynb  01-conexao-langchain-groq.ipynb  02-chatbot.ipynb  03-RAG.ipynb  04-CHAT-RAG-QA.ipynb  05-update_configs.ipynb
src/: app.py  chatbot.py
